[gd_scene load_steps=3 format=2]

[ext_resource path="res://textures/icons/tile176.png" type="Texture" id=2]
[ext_resource path="res://scenes/editor.gd" type="Script" id=3]

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="AcceptDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
smooth_scrolling = true

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 667.0
margin_bottom = 386.0
popup_exclusive = true
window_title = ""
resizable = true
mode_overrides_title = false
mode = 0
access = 2
current_dir = "/home/bioage/Documents/GitHub/bgarmor"
current_path = "/home/bioage/Documents/GitHub/bgarmor/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 0.05
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonExplore" type="Button" parent="Panel/HBoxContainer"]
margin_right = 257.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 146, 32.9 )
hint_tooltip = "Open project directory on default file manager."
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Explore"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSave" type="Button" parent="Panel/HBoxContainer"]
margin_left = 261.0
margin_right = 518.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 146, 32.9 )
hint_tooltip = "Save project data."
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCloseProject" type="Button" parent="Panel/HBoxContainer"]
margin_left = 522.0
margin_right = 780.0
margin_bottom = 20.0
hint_tooltip = "Close project and go back to welcome screen. This discards unsaved changes."
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tasks" type="Tabs" parent="Panel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Tasks"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGeneralTasks" type="Label" parent="Panel/TabContainer/Tasks/VBoxContainer"]
margin_right = 792.0
margin_bottom = 14.0
text = "General tasks:"
align = 1

[node name="ButtonBuildData" type="Button" parent="Panel/TabContainer/Tasks/VBoxContainer"]
margin_top = 18.0
margin_right = 792.0
margin_bottom = 38.0
text = "Build Data"

[node name="ButtonSetIcons" type="Button" parent="Panel/TabContainer/Tasks/VBoxContainer"]
margin_top = 42.0
margin_right = 792.0
margin_bottom = 62.0
text = "Set Icons"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TabContainer/Tasks/VBoxContainer"]
margin_top = 66.0
margin_right = 792.0
margin_bottom = 374.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer"]
margin_right = 394.0
margin_bottom = 308.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelRun" type="Label" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 394.0
margin_bottom = 31.0
text = "
Run game:"
align = 1

[node name="ButtonRunWindows32" type="Button" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 394.0
margin_bottom = 55.0
text = "Windows 32 bits"

[node name="ButtonRunWindows64" type="Button" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 394.0
margin_bottom = 79.0
text = "Windows 64 bits"

[node name="ButtonRunLinux32" type="Button" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 394.0
margin_bottom = 103.0
text = "Linux 32 bits"

[node name="ButtonRunLinux64" type="Button" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 394.0
margin_bottom = 127.0
text = "Linux 64 bits"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer"]
margin_left = 398.0
margin_right = 792.0
margin_bottom = 308.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelExportTo" type="Label" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 394.0
margin_bottom = 31.0
text = "
Export to:"
align = 1

[node name="ButtonExportWindows32" type="Button" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 35.0
margin_right = 394.0
margin_bottom = 55.0
text = "Windows 32 bits"

[node name="ButtonExportWindows64" type="Button" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 59.0
margin_right = 394.0
margin_bottom = 79.0
text = "Windows 64 bits"

[node name="ButtonExportLinux32" type="Button" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 83.0
margin_right = 394.0
margin_bottom = 103.0
text = "Linux 32 bits"

[node name="ButtonExportLinux64" type="Button" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 107.0
margin_right = 394.0
margin_bottom = 127.0
text = "Linux 64 bits"

[node name="ButtonExportAll" type="Button" parent="Panel/TabContainer/Tasks/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 131.0
margin_right = 394.0
margin_bottom = 151.0
hint_tooltip = "Exports to all available platforms."
text = "All Platforms"

[node name="Project" type="Tabs" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TabContainer/Project"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer1" type="VBoxContainer" parent="Panel/TabContainer/Project/HBoxContainer"]
margin_right = 384.0
margin_bottom = 364.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelGameName" type="Label" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer1"]
margin_right = 384.0
margin_bottom = 14.0
text = "Game name:"
align = 1

[node name="LineEditGameName" type="LineEdit" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer1"]
margin_top = 18.0
margin_right = 384.0
margin_bottom = 42.0
text = "Example Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelVersion" type="Label" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer1"]
margin_top = 46.0
margin_right = 384.0
margin_bottom = 60.0
text = "Version:"
align = 1

[node name="LineEditVersion" type="LineEdit" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer1"]
margin_top = 64.0
margin_right = 384.0
margin_bottom = 88.0
text = "v0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMainFile" type="Label" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer1"]
margin_top = 92.0
margin_right = 384.0
margin_bottom = 106.0
text = "Main blend file:"
align = 1

[node name="ButtonMainFile" type="Button" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer1"]
margin_top = 110.0
margin_right = 384.0
margin_bottom = 130.0
hint_tooltip = "Blend file which the game should start from."
text = "Example Game.blend"
icon = ExtResource( 2 )
align = 0
expand_icon = true

[node name="LabelDataSource" type="Label" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer1"]
margin_top = 134.0
margin_right = 384.0
margin_bottom = 148.0
text = "Data source:"
align = 1

[node name="ButtonDataSource" type="Button" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer1"]
margin_top = 152.0
margin_right = 384.0
margin_bottom = 172.0
hint_tooltip = "Game source directory. The main blend file should be contained in it."
text = "./data"
icon = ExtResource( 2 )
align = 0
expand_icon = true

[node name="LabelDataFile" type="Label" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer1"]
margin_top = 176.0
margin_right = 384.0
margin_bottom = 190.0
text = "Data target:"
align = 1

[node name="ButtonDataFile" type="Button" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer1"]
margin_top = 194.0
margin_right = 384.0
margin_bottom = 214.0
hint_tooltip = "Target game package file. This file will be released along with the engine runtime."
text = "./data.dat"
icon = ExtResource( 2 )
align = 0
expand_icon = true

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/TabContainer/Project/HBoxContainer"]
margin_left = 388.0
margin_right = 772.0
margin_bottom = 364.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelDataChunkSize" type="Label" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3"]
margin_right = 384.0
margin_bottom = 14.0
text = "Data chunk size:"
align = 1

[node name="SpinBoxDataChunkSize" type="SpinBox" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 384.0
margin_bottom = 42.0
min_value = 1.0
max_value = 256.0
value = 32.0
rounded = true
suffix = "MB"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPersistent" type="Label" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3"]
margin_top = 46.0
margin_right = 384.0
margin_bottom = 60.0
text = "Persistent files:"
align = 1

[node name="ItemListPersistent" type="ItemList" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3"]
margin_top = 64.0
margin_right = 384.0
margin_bottom = 175.0
size_flags_vertical = 3
auto_height = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3"]
margin_top = 179.0
margin_right = 384.0
margin_bottom = 203.0

[node name="LineEditPersistent" type="LineEdit" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_right = 225.0
margin_bottom = 24.0
hint_tooltip = "Add glob patterns of files that should be kept between 
runs such as save games, configuration, etc."
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="ButtonAddPersistent" type="Button" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_left = 229.0
margin_right = 304.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Add"

[node name="ButtonDelPersistent" type="Button" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3/HBoxContainer2"]
margin_left = 308.0
margin_right = 384.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Del"

[node name="LabelIgnore" type="Label" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3"]
margin_top = 207.0
margin_right = 384.0
margin_bottom = 221.0
text = "Ignore patterns:"
align = 1

[node name="ItemListIgnore" type="ItemList" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3"]
margin_top = 225.0
margin_right = 384.0
margin_bottom = 336.0
size_flags_vertical = 3
auto_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3"]
margin_top = 340.0
margin_right = 384.0
margin_bottom = 364.0

[node name="LineEditIgnore" type="LineEdit" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_right = 225.0
margin_bottom = 24.0
hint_tooltip = "Add glob patterns of files that should be ignored when building game data file such as 
Python's .pyc files, .blend1 backups, developer's save games and configuration, etc."
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="ButtonAddIgnore" type="Button" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 229.0
margin_right = 304.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Add"

[node name="ButtonDelIgnore" type="Button" parent="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3/HBoxContainer"]
margin_left = 308.0
margin_right = 384.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Del"

[node name="Paths" type="Tabs" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/TabContainer/Paths"]
anchor_right = 1.0
margin_left = 10.0
margin_right = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Paths/HBoxContainer2"]
margin_right = 384.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelEnginePaths" type="Label" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer"]
margin_right = 384.0
margin_bottom = 31.0
text = "Engine executable paths
"
align = 1

[node name="LabelEngineWindows32" type="Label" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer"]
margin_top = 35.0
margin_right = 384.0
margin_bottom = 49.0
text = "Windows 32 bits:"
align = 1

[node name="ButtonEngineWindows32" type="Button" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer"]
margin_top = 53.0
margin_right = 384.0
margin_bottom = 73.0
text = "./engine/Windows32/blenderplayer.exe"
icon = ExtResource( 2 )
align = 0
expand_icon = true

[node name="LabelEngineWindows64" type="Label" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer"]
margin_top = 77.0
margin_right = 384.0
margin_bottom = 108.0
text = "
Windows 64 bits:"
align = 1

[node name="ButtonEngineWindows64" type="Button" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer"]
margin_top = 112.0
margin_right = 384.0
margin_bottom = 132.0
text = "./engine/Windows64/blenderplayer.exe"
icon = ExtResource( 2 )
align = 0
expand_icon = true

[node name="LabelEngineLinux32" type="Label" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer"]
margin_top = 136.0
margin_right = 384.0
margin_bottom = 167.0
text = "
Linux 32 bits:"
align = 1

[node name="ButtonEngineLinux32" type="Button" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer"]
margin_top = 171.0
margin_right = 384.0
margin_bottom = 191.0
text = "./engine/Linux32/blenderplayer"
icon = ExtResource( 2 )
align = 0
expand_icon = true

[node name="LabelEngineLinux64" type="Label" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer"]
margin_top = 195.0
margin_right = 384.0
margin_bottom = 226.0
text = "
Linux 64 bits:"
align = 1

[node name="ButtonEngineLinux64" type="Button" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer"]
margin_top = 230.0
margin_right = 384.0
margin_bottom = 250.0
text = "./engine/Linux64/blenderplayer"
icon = ExtResource( 2 )
align = 0
expand_icon = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/TabContainer/Paths/HBoxContainer2"]
margin_left = 388.0
margin_right = 772.0
margin_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelPythonPaths" type="Label" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer2"]
margin_right = 384.0
margin_bottom = 31.0
text = "Python executable paths
"
align = 1

[node name="LabelPythonWindows32" type="Label" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer2"]
margin_top = 35.0
margin_right = 384.0
margin_bottom = 49.0
text = "Windows 32 bits:"
align = 1

[node name="ButtonPythonWindows32" type="Button" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer2"]
margin_top = 53.0
margin_right = 384.0
margin_bottom = 73.0
text = "./engine/Windows32/2.79/python/bin/python.exe"
icon = ExtResource( 2 )
align = 0
expand_icon = true

[node name="LabelPythonWindows64" type="Label" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer2"]
margin_top = 77.0
margin_right = 384.0
margin_bottom = 108.0
text = "
Windows 64 bits:"
align = 1

[node name="ButtonPythonWindows64" type="Button" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer2"]
margin_top = 112.0
margin_right = 384.0
margin_bottom = 132.0
text = "./engine/Windows64/2.79/python/bin/python.exe"
icon = ExtResource( 2 )
align = 0
expand_icon = true

[node name="LabelPythonLinux32" type="Label" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer2"]
margin_top = 136.0
margin_right = 384.0
margin_bottom = 167.0
text = "
Linux 32 bits:"
align = 1

[node name="ButtonPythonLinux32" type="Button" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer2"]
margin_top = 171.0
margin_right = 384.0
margin_bottom = 191.0
text = "./engine/Linux32/2.79/python/bin/python3.5m"
icon = ExtResource( 2 )
align = 0
expand_icon = true

[node name="LabelPythonLinux64" type="Label" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer2"]
margin_top = 195.0
margin_right = 384.0
margin_bottom = 226.0
text = "
Linux 64 bits:"
align = 1

[node name="ButtonPythonLinux64" type="Button" parent="Panel/TabContainer/Paths/HBoxContainer2/VBoxContainer2"]
margin_top = 230.0
margin_right = 384.0
margin_bottom = 250.0
text = "./engine/Linux64/2.79/python/bin/python3.5m"
icon = ExtResource( 2 )
align = 0
expand_icon = true

[connection signal="pressed" from="Panel/HBoxContainer/ButtonExplore" to="." method="_on_ButtonExplore_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ButtonSave" to="." method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ButtonCloseProject" to="." method="_on_ButtonCloseProject_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Tasks/VBoxContainer/ButtonBuildData" to="." method="_on_ButtonBuildData_pressed"]
[connection signal="value_changed" from="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3/SpinBoxDataChunkSize" to="." method="_on_SpinBoxDataChunkSize_value_changed"]
[connection signal="pressed" from="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3/HBoxContainer2/ButtonAddPersistent" to="." method="_on_ButtonAddPersistent_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3/HBoxContainer2/ButtonDelPersistent" to="." method="_on_ButtonDelPersistent_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3/HBoxContainer/ButtonAddIgnore" to="." method="_on_ButtonAddIgnore_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Project/HBoxContainer/VBoxContainer3/HBoxContainer/ButtonDelIgnore" to="." method="_on_ButtonDelIgnore_pressed"]
